K8s/vanilla/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sogum-ai
  labels:
    environment: dev  # Change to prod or staging as needed
