K8s/vanilla/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pake-ingress
  namespace: sogum-ai
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pake.sogum-ai.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pake
                port:
                  number: 8081
